<resources>
    <string name="app_name"><small>
                tre</small><big>e</big><small>co</small></string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="this_feature_isn_t_available_string">Connecting  Environment</string>
    <string name="treeco_string">treeco</string>
    <string name="trees_near_by_string">Trees Near By</string>
    <string name="geo_tag_a_tree_near_by__share_its_story_with_others__string">Geo tag a tree near by.Share its story with others. </string>
    <string name="next_string">NEXT</string>
    <string name="plantation_event_string">Plantation Event</string>
    <string name="plan_and_view_your_event__organise_an_event_effectively__string">Plan and view your Event.Organise an Event effectively.</string>
    <string name="next_ek1_string">NEXT</string>
    <string name="back_string">BACK</string>
    <string name="plant_a_tree_string">Plant a Tree</string>
    <string name="geo_tag_a_tree__share_with_others_to_maintain__string">Geo tag a tree.Share with others to maintain.</string>
    <string name="next_ek2_string">NEXT</string>
    <string name="back_ek1_string">BACK</string>
    <string name="maintain_a_tree_string">Maintain a Tree</string>
    <string name="send_or_receive_notification_to__water_near_by_plants__string">Send or receive notification to water near by plants.</string>
    <string name="next_ek3_string">NEXT</string>
    <string name="back_ek2_string">BACK</string>
    <string name="community_string">Community</string>
    <string name="create_your_own_community__chat__connect_and_contribute__string">Create your own Community.Chat, Connect and Contribute.</string>
    <string name="done_string">DONE</string>
    <string name="back_ek3_string">BACK</string>
    <string name="create_event_string">Create Event</string>
    <string name="johndoe_mail_com_string">Bhubaneswar</string>
    <string name="johndoe_mail_com_ek1_string">Location</string>
    <string name="johndoe_mail_com_ek2_string">Expert to organize</string>
    <string name="johndoe_mail_com_ek3_string">Event Type</string>
    <string name="johndoe_mail_com_ek4_string">Saytree Foundation</string>
    <string name="johndoe_mail_com_ek5_string">Choice of Expert</string>
    <string name="johndoe_mail_com_ek6_string">Neolamarckia cadamba </string>
    <string name="johndoe_mail_com_ek7_string">Type of trees to be planted</string>
    <string name="johndoe_mail_com_ek8_string">10000</string>
    <string name="johndoe_mail_com_ek9_string">Plantation area in Sq. Ft.</string>
    <string name="johndoe_mail_com_ek10_string">100</string>
    <string name="johndoe_mail_com_ek11_string">Number of trees to plant</string>
    <string name="johndoe_mail_com_ek12_string">Expert to maintain</string>
    <string name="johndoe_mail_com_ek13_string">Maintenance type</string>
    <string name="johndoe_mail_com_ek14_string">Your Choice Gardener</string>
    <string name="johndoe_mail_com_ek15_string">Choice of Maintainer</string>
    <string name="johndoe_mail_com_ek16_string">9:00 AM</string>
    <string name="send_for_approval_string">SEND FOR APPROVAL</string>
    <string name="johndoe_mail_com_ek17_string">Odia nutana barsa upalakhye brukhya rupana.</string>
    <string name="johndoe_mail_com_ek18_string">Kalinga Plantation Drive 1</string>
    <string name="____label_string">Event name</string>
    <string name="____label_ek1_string">Point of contact</string>
    <string name="____label_ek2_string">Event description</string>
    <string name="_14_04_2021_string">14/04/2021</string>
    <string name="johndoe_mail_com_ek20_string">Date</string>
    <string name="select_your_choice_of_expert_and_tree_string">Select your choice of Expert and Tree</string>
    <string name="johndoe_mail_com_ek21_string">Saytree Foundation</string>
    <string name="johndoe_mail_com_ek22_string">Choice of Expert</string>
    <string name="johndoe_mail_com_ek23_string">Neolamarckia cadamba </string>
    <string name="johndoe_mail_com_ek24_string">Type of trees to be planted</string>
    <string name="neolamarckia_cadamba_string">Neolamarckia cadamba </string>
    <string name="benefits__string">Benefits:</string>
    <string name="select_string">SELECT</string>
    <string name="cost_tree_year_string">Cost/Tree/Year</string>
    <string name="rs_12_string">Rs 12</string>
    <string name="rs_1_200_string">Rs 1,200</string>
    <string name="carbon_footprint___25kgoxygen___air_quality_indexwatering_duration__once_in_a_monthapplicable_soil_condition__any_normal_full_growth_duration__3yrssurvival_rate__95__string">Carbon footprint : 25kgOxygen ??Air Quality IndexWatering duration: Once in a monthApplicable soil condition: Any(Normal)Full Growth Duration: 3yrsSurvival Rate: 95%</string>
    <string name="login_with_facebook_string">Total cost for Event Organization</string>
    <string name="number_of_trees_to_plant_string">Number of trees to plant</string>
    <string name="select_ek1_string">SELECT</string>
    <string name="_1000_string">1000</string>
    <string name="area_in_sq__ft__string">Area in Sq. Ft.</string>
    <string name="login_with_facebook_ek1_string">10meters</string>
    <string name="login_with_facebook_ek2_string">1meter</string>
    <string name="distance_among_trees_string">Distance among trees</string>
    <string name="login_with_facebook_ek3_string">2m</string>
    <string name="_100_string">100</string>
    <string name="number_of_trees_recommended_string">Number of trees recommended </string>
    <string name="johndoe_mail_com_ek25_string">Enter manually here </string>
    <string name="select_your_choice_of_maintainer_string">Select your choice of Maintainer</string>
    <string name="johndoe_mail_com_ek26_string">Your Choice Gardener</string>
    <string name="johndoe_mail_com_ek27_string">Choice of Maintainer</string>
    <string name="johndoe_mail_com_ek28_string">1 Yr</string>
    <string name="johndoe_mail_com_ek29_string">Duration</string>
    <string name="your_choice_gardener_string">Your Choice Gardener</string>
    <string name="about_string">About</string>
    <string name="service_string">Service</string>
    <string name="selected_tree_to_be_planted__string">Selected tree to be planted: </string>
    <string name="select_ek2_string">SELECT</string>
    <string name="cost_tree_month_string">Cost/Tree/Month</string>
    <string name="rs_12_ek1_string">Rs 12</string>
    <string name="rs_14_400_string">Rs 14,400</string>
    <string name="login_with_facebook_ek4_string">Total cost for Maintenance/Year</string>
    <string name="experience_in_plantation_maintenance__10yrsno__of_trees_maintained_till_date__1_20_000_string">Experience in plantation maintenance: 10yrsNo. Of trees maintained till date: 1,20,000</string>
    <string name="land_scaping__watering__re_sizing__pest__control__re_soiling_string">Land scaping, Watering, Re-sizing, Pest control, Re-soiling</string>
    <string name="neolamarckia_cadamba_ek1_string">Neolamarckia cadamba </string>
    <string name="total_number_of_trees_string">Total number of trees</string>
    <string name="maintenance_duration_string">Maintenance duration</string>
    <string name="_100_ek1_string">100</string>
    <string name="_1_yr_string">1 Yr</string>
    <string name="review_and_confirm_string">Review and Confirm </string>
    <string name="johndoe_mail_com_ek30_string">Bhubaneswar</string>
    <string name="johndoe_mail_com_ek31_string">Location</string>
    <string name="johndoe_mail_com_ek32_string">Expert to organize</string>
    <string name="johndoe_mail_com_ek33_string">Event Type</string>
    <string name="johndoe_mail_com_ek34_string">Saytree Foundation</string>
    <string name="johndoe_mail_com_ek35_string">Choice of Expert</string>
    <string name="johndoe_mail_com_ek36_string">Neolamarckia cadamba </string>
    <string name="johndoe_mail_com_ek37_string">Type of trees to be planted</string>
    <string name="johndoe_mail_com_ek38_string">10000</string>
    <string name="johndoe_mail_com_ek39_string">Plantation area in Sq. Ft.</string>
    <string name="johndoe_mail_com_ek40_string">100</string>
    <string name="johndoe_mail_com_ek41_string">Number of trees to plant</string>
    <string name="johndoe_mail_com_ek42_string">Expert to maintain</string>
    <string name="johndoe_mail_com_ek43_string">Maintenance type</string>
    <string name="johndoe_mail_com_ek44_string">Your Choice Gardener</string>
    <string name="johndoe_mail_com_ek45_string">Choice of Maintainer</string>
    <string name="johndoe_mail_com_ek46_string">9:00 AM</string>
    <string name="johndoe_mail_com_ek47_string">Odia nutana barsa upalakhye brukhya rupana.</string>
    <string name="johndoe_mail_com_ek48_string">Kalinga Plantation Drive 1</string>
    <string name="____label_ek3_string">Event name</string>
    <string name="____label_ek4_string">Point of contact</string>
    <string name="____label_ek5_string">Event description</string>
    <string name="_14_04_2021_ek1_string">14/04/2021</string>
    <string name="johndoe_mail_com_ek50_string">Date</string>
    <string name="rs_14_400_ek1_string">Rs 14,400</string>
    <string name="login_with_facebook_ek5_string">Total cost for Maintenance/Year</string>
    <string name="login_with_facebook_ek6_string">Total cost for event</string>
    <string name="rs_1_200_ek1_string">Rs 1,200</string>
    <string name="login_with_facebook_ek7_string">Total cost for Event Organization</string>
    <string name="rs_15_600_string">Rs 15,600</string>
    <string name="send_for_approval_ek1_string">SEND FOR APPROVAL</string>
    <string name="event_details_string">Event Details</string>
    <string name="event_1_string">Event 1</string>
    <string name="description_string">Description</string>
    <string name="event_overview_lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry__string">Event overview-Lorem Ipsum is simply dummy text of the printing and typesetting industry. </string>
    <string name="register_string">Register</string>
    <string name="_21_july_2020_string">21 July 2020</string>
    <string name="_9_00_am_string">9:00 AM</string>
    <string name="khandagiri_string">Khandagiri</string>
    <string name="tree_string">Tree</string>
    <string name="mango_string">Mango</string>
    <string name="number_string">Number</string>
    <string name="_150_string">150</string>
    <string name="area_string">Area</string>
    <string name="_10_000_sq__ft_string">10,000 sq. Ft</string>
    <string name="gupta_string">Gupta</string>
    <string name="chintu_string">Chintu</string>
    <string name="organiser_string">Organiser</string>
    <string name="participants_string">Participants</string>
    <string name="discussion_string">Discussion</string>
    <string name="event_details_ek1_string">Event Details</string>
    <string name="event_1_ek1_string">Event 1</string>
    <string name="created_string">Created</string>
    <string name="participants_ek1_string">Participants</string>
    <string name="info_string">Info</string>
    <string name="discussion_ek1_string">Discussion</string>
    <string name="event_description__odia_nutana_barsa_upalakhye_brukhya_rupana__string">Event Description: Odia nutana barsa upalakhye brukhya rupana.</string>
    <string name="location__bhubaneswar_string">Location:  Bhubaneswar</string>
    <string name="point_of_contact__jyotiram_string">Point of Contact:  Jyotiram</string>
    <string name="plantation_area_in_sq__ft___1000_string">Plantation area in Sq. Ft.:  1000</string>
    <string name="date__string">Date:</string>
    <string name="_120_string">120</string>
    <string name="gupta_ek5_string">Gupta</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the__printing_and_typesetting_industry__string">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </string>
    <string name="_12_mar_2021_string">12 Mar 2021</string>
</resources>