<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true">


    <!-- number of tree planted slider -->
    <ScrollView
        android:id="@+id/numbertreeplantedpage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/page_createevent_2_ek1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0dp">

                <ImageView
                    android:id="@+id/base_ek4"
                    android:layout_width="311dp"
                    android:layout_height="89dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="216dp"
                    android:contentDescription="base_ek4"
                    android:src="@drawable/base_ek4" />

                <TextView
                    android:id="@+id/number_of_trees_to_plant"
                    android:layout_width="173dp"
                    android:layout_height="29dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="34dp"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/number_of_trees_to_plant_string"
                    android:textColor="@color/this_feature_isn_t_available_color"
                    android:textSize="14sp" />


                <RelativeLayout
                    android:id="@+id/inputs_ek4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/group_307numberoftree"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="19dp">

                    <ImageView
                        android:id="@+id/selectbtnval"
                        android:layout_width="wrap_content"
                        android:layout_height="52dp"
                        android:src="@drawable/rectangle_123_ek2" />

                    <TextView
                        android:id="@+id/select_ek1"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginLeft="129dp"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/nunito_extrabold"
                        android:text="@string/select_ek1_string"
                        android:textColor="@color/this_feature_isn_t_available_color"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt"
                        android:layout_width="73dp"
                        android:layout_height="32dp"
                        android:layout_marginTop="60dp"
                        android:fontFamily="@font/nunito_semibold"
                        android:text="  "
                        android:textColor="@color/this_feature_isn_t_available_color"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <ImageView
                    android:id="@+id/disablepopup"
                    android:layout_width="36dp"
                    android:layout_height="3dp"
                    android:layout_marginStart="170dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="rectangle_137_ek1"
                    android:src="@drawable/rectangle_137_ek1" />

                <TextView
                    android:id="@+id/totalarea"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"

                    android:layout_marginTop="72dp"
                    android:layout_toEndOf="@+id/area_in_sq__ft_"
                    android:fontFamily="@font/nunito_extrabold"
                    android:text="@string/_1000_string"
                    android:textColor="@color/this_feature_isn_t_available_color"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/area_in_sq__ft_"
                    android:layout_width="104dp"
                    android:layout_height="29dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="74dp"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/area_in_sq__ft__string"
                    android:textColor="@color/this_feature_isn_t_available_color"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/login_with_facebook_ek1"
                    android:layout_width="77dp"
                    android:layout_height="29dp"
                    android:layout_marginLeft="283dp"
                    android:layout_marginTop="181dp"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/login_with_facebook_ek1_string"
                    android:textColor="@color/this_feature_isn_t_available_color"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/login_with_facebook_ek2"
                    android:layout_width="63dp"
                    android:layout_height="29dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="181dp"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/login_with_facebook_ek2_string"
                    android:textColor="@color/this_feature_isn_t_available_color"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/distance_among_trees"
                    android:layout_width="154dp"
                    android:layout_height="29dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="124dp"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/distance_among_trees_string"
                    android:textColor="@color/this_feature_isn_t_available_color"
                    android:textSize="14sp" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/slider"
                    android:layout_width="336dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="142dp"
                    android:stepSize="0.5"
                    android:value="1.0"
                    android:valueFrom="1.0"
                    android:valueTo="10.0"
                    app:haloColor="@color/trees_near_by_color"
                    app:thumbColor="@color/white"
                    app:thumbStrokeColor="@color/black"
                    app:thumbStrokeWidth="0.2dp"
                    app:trackColorActive="@color/trees_near_by_color"
                    app:trackColorInactive="@color/trees_near_by_color" />

                <TextView
                    android:id="@+id/showtree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/base_ek4"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="174dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/nunito_extrabold"
                    android:text="@string/_100_string"
                    android:textColor="@color/trees_near_by_color"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/number_of_trees_recommended"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/showtree"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="89dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/number_of_trees_recommended_string"
                    android:textColor="@color/this_feature_isn_t_available_color"
                    android:textSize="14sp" />

                <RelativeLayout
                    android:id="@+id/group_307numberoftree"
                    android:layout_width="311dp"
                    android:layout_height="match_parent"

                    android:layout_below="@+id/base_ek4"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp">

                    <!--     <RelativeLayout
                        android:id="@+id/rectangle_99_ek26numberoftree"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp">

                        <ImageView
                            android:id="@+id/vector_ek252numberoftree"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="0dp"
                            android:contentDescription="vector_ek252"
                            android:src="@drawable/vector_ek252" />

                    </RelativeLayout> -->


                    <RelativeLayout
                        android:id="@+id/inputs_ek44numberoftree"

                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/filledTextFieldnumberoftree"

                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="Enter manually here"

                            app:boxCornerRadiusBottomEnd="15dp"
                            app:boxCornerRadiusBottomStart="15dp"
                            app:boxCornerRadiusTopEnd="15dp"
                            app:boxCornerRadiusTopStart="15dp"

                            app:boxStrokeColor="#32CB00"
                            app:endIconMode="custom"
                            app:hintTextColor="#32CB00">

                            <!--this is the actual edit text which takes the input-->
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edit_text_numberoftree"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/nunito_semibold" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </RelativeLayout>

                </RelativeLayout>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>