<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/eventdetailsafterregister_discussion_ek3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="-630dp">

        <ImageView
            android:id="@+id/likeimgr"
            android:layout_width="24.01dp"
            android:layout_height="21.1dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="762dp"
            android:contentDescription="fi_rr_heart"
            android:src="@drawable/fi_rr_heart" />

        <TextView
            android:id="@+id/likednumr"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="762dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/_120_string"
            android:textColor="@color/this_feature_isn_t_available_color"
            android:textSize="14sp" />


        <RelativeLayout
            android:id="@+id/group_437"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="659dp">

            <ImageView
                android:id="@+id/ellipse_140_ek20"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:contentDescription="ellipse_140_ek20"
                android:src="@drawable/ellipse_140_ek20" />


            <RelativeLayout
                android:id="@+id/fi_rr_user_ek20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="4dp">

                <ImageView
                    android:id="@+id/path_425_ek20"
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="0dp"
                    android:contentDescription="path_425_ek20"
                    android:src="@drawable/path_425_ek20" />

                <ImageView
                    android:id="@+id/path_426_ek20"
                    android:layout_width="12dp"
                    android:layout_height="6.69dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="9dp"
                    android:contentDescription="path_426_ek20"
                    android:src="@drawable/path_426_ek20" />

            </RelativeLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/namedisplayr"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_marginLeft="72dp"
            android:layout_marginTop="663dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/gupta_ek5_string"
            android:textColor="@color/this_feature_isn_t_available_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/commentdisplayr"
            android:layout_width="331dp"
            android:layout_height="39dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="703dp"
            android:fontFamily="@font/nunito_semibold"
            android:inputType="textMultiLine"
            android:text="@string/lorem_ipsum_is_simply_dummy_text_of_the__printing_and_typesetting_industry__string"
            android:textColor="@color/this_feature_isn_t_available_color"
            android:textSize="14sp" />

     <!--   <TextView
            android:id="@+id/replynum"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_marginLeft="141dp"
            android:layout_marginTop="762dp"
            android:fontFamily="Segoe UI"
            android:text="@string/_2_string"
            android:textColor="@color/this_feature_isn_t_available_color"
            android:textSize="14sp" /> -->


      <!--  <RelativeLayout
            android:id="@+id/reply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="109dp"
            android:layout_marginTop="761dp">


            <RelativeLayout
                android:id="@+id/group_439"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp">

                <ImageView
                    android:id="@+id/reply_disc"
                    android:layout_width="24dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:clickable="true"
                    android:contentDescription="path_510"
                    android:src="@drawable/path_510" />

            </RelativeLayout>

        </RelativeLayout>-->

        <TextView
            android:id="@+id/commentedonr"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_marginLeft="235dp"
            android:layout_marginTop="763dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/_12_mar_2021_string"
            android:textColor="@color/_12_mar_2021_color"
            android:textSize="14sp" />


    </RelativeLayout>
</RelativeLayout>